--- a/styles.css
+++ b/styles.css
@@ -38,10 +38,12 @@ header {
   align-items: center;
   
 }
-div{
-  padding: 10px;
-  border-radius: 5px;
+.card{
+  padding: 2rem;
+  border: 1px solid #e5e4e2;
   margin: 20px;
+  width: 25%;
+  border-radius: 8px;
 
 }
 footer {
